--- a/app/index.html
+++ b/app/index.html
@@ -9,15 +9,15 @@
 <body>
 	
 	<!-- weather -->
-	<nav class="container-fluid "  id="weather">
-		<div class="row reset position d-flex justify-content-end" >
+	<nav class="container-fluid  "  id="weather">
+		<div class="row reset position  d-flex justify-content-end" >
 			<a href=""></a>
 		</div>
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation container-fluid">
-		<nav class="navbar position reset row navbar-expand-lg navbar-light bg-light" id="navigation" >
+	<div class="navigation reset container-fluid position">
+		<nav class="navbar  reset row navbar-expand-lg navbar-light bg-light" id="navigation" >
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="#">
 					<!-- LOGO -->
@@ -102,17 +102,17 @@
 	
 	<h6>15 to 23 july</h6>
 </div>
-
+<!-- SECTION TWO -->
 <div id="content" class="container-fluid  ">
 	
-	<div class="row d-flex justify-content-center align-items-center flex-column"> 
+	<div class="row d-flex position justify-content-center align-items-center flex-column"> 
 		<h1>Take the </h1> 
 		<div class=" circle d-flex flex-row">
 			<div class="circle-blue"> </div> 
 			<div class="circle-orange" > </div> 
 			<div class="circle-blue"> </div> 
 		</div>
-		<p>
+		<p class="">
 			Wake up guys! Do not miss the perfect opportunity to experience 8 unforgettable days with the whole world in one place! 
 			Through art, science and practical work you will have a chance to think creatively about today’s burning topics. Let’s talk about the next step in the career of every one of you and look closely at global problems that surround us. It’s time to ask yourself: why wouldn’t YOU be the person that will push the limits and change the world? Belgrade has something to offer to everyone. We are proud to say that next summer we are the hosts of young leaders in our city. So, make room for ISWiB 2018 and spend an unforgettable summer in Belgrade! We can all agree that it is high time for new challenges, therefore let’s take the lead together!
 		</p>
@@ -120,16 +120,22 @@
 		
 	</div>
 	<div class="rect"></div>
-</div>
-
-
-<div class="container-fluid reset third">
 	<div class="skew"> </div>
 	<div class="skewRight"> </div>
-	<div class="row position d-flex flex-row content">
+</div>
+
+<!-- THIRD section -->
+<div class="container-fluid  reset third  justify-content-center flex-column ">
+	<div class="row  reset d-flex justify-content-between position  content">
+		
 		<h1 class="col-lg-12">Activities</h1>
+		<!-- <div class=" circle d-flex flex-row">
+			<div class="circle-white"> </div> 
+			<div class="circle-orange" > </div> 
+			<div class="circle-white"> </div> 
+		</div> -->
 		<!-- first box -->
-		<div class="col  box">
+		<div class="col-sm-12 col-md-8 col-lg-3 reset box">
 			<svg version="1.1" id="conference" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			width="800px" height="600px" viewBox="0 0 800 600" style="enable-background:new 0 0 800 600;" xml:space="preserve">
 			<g>
@@ -157,7 +163,6 @@
 			c0.909-2.728,0.909-6.364-0.909-8.182c-1.818-1.817-4.546-4.546-7.272-4.546h-24.545v-89.09H600v89.09H499.091z M681.818,141.818
 			H547.272v-16.364h61.818c5.455,0,9.091-3.637,9.091-9.09V49.091h63.637V141.818z"/>
 		</svg>
-		
 		<h2>Opening Ceremony</h2>
 		<hr>
 		<p>The Opening ceremony is traditionally held in Belgrade City Hall and represents an official welcome message to the participants.
@@ -168,7 +173,7 @@
 		
 		
 		<!-- second box -->
-		<div class="col  box">
+		<div class="col-sm-12  col-md-8  col-lg-3 box">
 			<svg version="1.1" id="coaster" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			viewBox="0 0 29.824 29.824" style="enable-background:new 0 0 29.824 29.824;"
 			xml:space="preserve">
@@ -200,7 +205,7 @@
 			
 		</div>
 		<!-- third box -->
-		<div class="col  box">
+		<div class="col-sm-12  col-md-8 col-lg-3 box">
 			<svg version="1.1" id="world" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
 			<g>
@@ -266,14 +271,80 @@
 				</g>
 			</g>
 		</svg>
-		<h2>Country Fair</h2>
+		<h2>Flag Parade</h2>
 		<hr>
 		<p>The Opening ceremony is traditionally held in Belgrade City Hall and represents an official welcome message to the participants.
 			During the opening, the president of the Organizing Committee of the festival, the representatives of the City of Belgrade</p>
 			<a href="" class="button-orange"> read more</a>
-			
 		</div>
+		
+	</div>
+	<div  class=" position more col-12">
+		<h5  >And many more..</h5>
+		<hr >
+	</div>
+</div>
 
+
+<!-- FOURTH SECTION -->
+<div class="container-fluid  workshops">
+	<div class="row d-flex flex-column position align-items-center justify-content-center">
+		<h1> Workshops</h1>
+		<div class=" circle d-flex flex-row">
+			<div class="circle-blue"> </div> 
+			<div class="circle-orange" > </div> 
+			<div class="circle-blue"> </div> 
+		</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+			sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut a
+			liquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
+			in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Learn more <a href="">HERE</a>
+		</p>
+	</div>
+</div>
+
+
+<!-- FIFTH SECTION -->
+
+<div class="container-fluid  orgTeam">
+	<div class="row d-flex flex-column position align-items-center justify-content-center">
+		<h1> Our</h1>
+		<div class=" circle d-flex flex-row">
+			<div class="circle-blue"> </div> 
+			<div class="circle-white" > </div> 
+			<div class="circle-blue"> </div> 
+		</div>
+		<p>ISWiB 2018 Organizing Team brings together 30 young, 
+			successful and ambitious people who are students and post-graduates, 
+			divided into 7 different sub-teams:
+		</p>
+		<ul class="position ">
+			<li><a href="" data-toggle="collapse" data-target="#team"> Human Resourses Team</a></li>
+			
+			<!-- THIS IS CONTENT THAT COLLAPSES -->
+			<div id="team" class="collapse container-fluid justify-content-center myCollapse ">
+				
+					<img class="col-sm-3 col-lg-4 " src="../img/jeca.png"   alt="">
+					<p class="reset">Ime i Prezime, 22</p>
+							
+					<img class="" class="col-sm-12 col-lg-4"  src="../img/jeca.png" alt="">
+					<p class="reset">Ime i Prezime, 22</p>
+			
+			</div>
+			
+			
+			
+			<li><a href="">Educational Programme Team </a></li>
+			<li><a href="">Public Relations Team </a></li>
+			<li><a href=""> Event Team</a></li>
+			<li><a href=""> Fundrasing Team </a></li>
+			<li><a href=""> International Communication Team </a></li>
+			<li><a href=""> IT &amp; Design Team </a></li>	
+		</ul>
+		
 	</div>
 </div>
 
