--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation reset container-fluid position">
-		<nav class="navbar  reset row navbar-expand-lg navbar-light bg-light" id="navigation" >
+	<div class="navigation reset container-fluid  r" id="navigation">
+		<nav class="navbar position reset row  navbar-light navbar-expand-lg  "  >
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="#">
 					<!-- LOGO -->
@@ -65,7 +65,7 @@
 					<ul class="dropdown-menu myDropdown reset" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="#">Activity</a>
 						<a class="dropdown-item" href="#">Workshops</a>
-						<a class="dropdown-item" href="#">Participants</a>
+						<a class="dropdown-item" href="participants.html">Participants</a>
 						<a class="dropdown-item" href="#">Volunteers</a>
 						<a class="dropdown-item" href="#">Promoters</a>
 					</ul>
@@ -81,7 +81,7 @@
 					<ul class="dropdown-menu myDropdown" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="#">Activity</a>
 						<a class="dropdown-item" href="#">Workshops</a>
-						<a class="dropdown-item" href="#">Participants</a>
+						<a class="dropdown-item" href="participants.html">Participants</a>
 						<a class="dropdown-item" href="#">Volunteers</a>
 						<a class="dropdown-item" href="#">Promoters</a>
 					</ul>
@@ -354,7 +354,7 @@
 </div>
 
 <footer class="container-fluid " id="footer">
-	<class class="row position d-flex justify-content-between">
+	<div class="row position d-flex justify-content-between">
 		
 		<ul class="col-sm-12 col-md-4 col-lg-2">
 			<li><a href=""> Festival </a></li>
@@ -404,7 +404,7 @@
 					<li><a href="">e-mail: iswib@iswib.org</a></li>
 				</ul>
 
-	</class>
+	</div>
 </footer>
 <footer class="container-fluid copyright">
 	<div class="row position d-flex justify-content-between align-items-center">
