--- a/app/participants.html
+++ b/app/participants.html
@@ -19,7 +19,7 @@
 	<div class="navigation reset container-fluid  r" id="navigation">
 		<nav class="navbar position reset row  d-flex align-items-center navbar-expand-lg  "  >
 			<div class="brand reset">
-				<a class="navbar-brand reset" href="#">
+				<a class="navbar-brand reset" href="index.html">
 					<!-- LOGO -->
 					<svg version="1.1" class="d-inline-block reset align-middle" id="balloon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					width="83.5px" height="89.75px" viewBox="0 0 83.5 89.75" style="enable-background:new 0 0 83.5 89.75;" xml:space="preserve">
@@ -96,20 +96,38 @@
 
 
 
-<div class="container-fluid">
-
-<div class="row">
-
-<h1>Participants Application</h1>
-
-content
-
-
+<div class="container-fluid ">
+	<div class="row position"> 
+		
+		<form class="form-horizontal" action="/action_page.php">
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="email">Email:</label>
+				<div class="col-sm-10">
+					<input type="email" class="form-control" id="email" placeholder="Enter email">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="pwd">Password:</label>
+				<div class="col-sm-10"> 
+					<input type="password" class="form-control" id="pwd" placeholder="Enter password">
+				</div>
+			</div>
+			<div class="form-group"> 
+				<div class="col-sm-offset-2 col-sm-10">
+					<div class="checkbox">
+						<label><input type="checkbox"> Remember me</label>
+					</div>
+				</div>
+			</div>
+			<div class="form-group"> 
+				<div class="col-sm-offset-2 col-sm-10">
+					<button type="submit" class="btn btn-default">Submit</button>
+				</div>
+			</div>
+		</form>
+		
+	</div>
 </div>
-
-
-</div>
-
 
 
 
@@ -149,38 +167,38 @@ content
 			<li><a href="">Partners &amp; Friends</a></li>
 			<li><a href=""> Media partners</a></li>
 		</ul>
-
+		
 		<ul class="col-sm-12 col-md-4 col-lg-2">
-				<li><a href=""> Latest News </a></li>
-				<li><a href="">Take the Lead </a></li>
-				<li><a href="">Open Applications </a></li>
-				<li><a href=""> Call for Promoters</a></li>
-			</ul>
-
-			<ul class="col-sm-12 col-md-4 col-lg-2">
-					<li><a href="">Contact us </a></li>
-					<li><a href="">Facebook.com/iswib </a></li>
-					<li><a href="">Twitter.com/iswib</a></li>
-					<li><a href="">Instagram: @iswib_</a></li>
-					<li><a href="">Youtube: @iswibtv</a></li>
-					<li><a href="">e-mail: iswib@iswib.org</a></li>
-				</ul>
-
-            </div>
+			<li><a href=""> Latest News </a></li>
+			<li><a href="">Take the Lead </a></li>
+			<li><a href="">Open Applications </a></li>
+			<li><a href=""> Call for Promoters</a></li>
+		</ul>
+		
+		<ul class="col-sm-12 col-md-4 col-lg-2">
+			<li><a href="">Contact us </a></li>
+			<li><a href="">Facebook.com/iswib </a></li>
+			<li><a href="">Twitter.com/iswib</a></li>
+			<li><a href="">Instagram: @iswib_</a></li>
+			<li><a href="">Youtube: @iswibtv</a></li>
+			<li><a href="">e-mail: iswib@iswib.org</a></li>
+		</ul>
+		
+	</div>
 </footer>
 <footer class="container-fluid copyright">
 	<div class="row position d-flex justify-content-between align-items-center">
-
-			<p class="">2018 © Lena Bjekovic</p>
-			<div class="">
-				<a href=""> Privacy policy</a>
-				<a href="">Terms of Service</a>
-				<a href="">Contact</a>
-			</div>
-
-
+		
+		<p class="">2018 © Lena Bjekovic</p>
+		<div class="">
+			<a href=""> Privacy policy</a>
+			<a href="">Terms of Service</a>
+			<a href="">Contact</a>
+		</div>
+		
+		
 	</div>
-
+	
 </footer>
 
 <script type="text/javascript" src="scripts/vendor.js"></script>
@@ -188,5 +206,10 @@ content
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
+
+
+
+<!-- geodata js -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+<script src="//geodata.solutions/includes/countrystatecity.js"></script></body>
 </html>
