announcement nav, fixed landing page

--- a/app/contact.html
+++ b/app/contact.html
@@ -17,9 +17,9 @@
 	
 	<!-- main nav -->
 	<div class="navigation reset container-fluid  r" id="navigation">
-		<nav class="navbar position reset row  d-flex align-items-center navbar-expand-lg  "  >
+		<nav class="navbar position reset row  navbar-light navbar-expand-lg  "  >
 			<div class="brand reset">
-				<a class="navbar-brand reset" href="index.html">
+				<a class="navbar-brand reset" href="#">
 					<!-- LOGO -->
 					<svg version="1.1" class="d-inline-block reset align-middle" id="balloon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					width="83.5px" height="89.75px" viewBox="0 0 83.5 89.75" style="enable-background:new 0 0 83.5 89.75;" xml:space="preserve">
@@ -65,7 +65,7 @@
 					<ul class="dropdown-menu myDropdown reset" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="#">Activity</a>
 						<a class="dropdown-item" href="#">Workshops</a>
-						<a class="dropdown-item" href="#">Participants</a>
+						<a class="dropdown-item" href="participants.html">Participants</a>
 						<a class="dropdown-item" href="#">Volunteers</a>
 						<a class="dropdown-item" href="#">Promoters</a>
 					</ul>
@@ -81,31 +81,32 @@
 					<ul class="dropdown-menu myDropdown" aria-labelledby="dropdownMenuLink">
 						<a class="dropdown-item" href="#">Activity</a>
 						<a class="dropdown-item" href="#">Workshops</a>
-						<a class="dropdown-item" href="#">Participants</a>
+						<a class="dropdown-item" href="participants.html">Participants</a>
 						<a class="dropdown-item" href="#">Volunteers</a>
 						<a class="dropdown-item" href="#">Promoters</a>
 					</ul>
 					
 				</li>
-				<li><a href="contact.html">contact</a></li>
+				<li><a href="">contact</a></li>
 				
 			</ul>
 		</div>
 	</nav>
 </div>
 
+<!-- Announcement naav -->
+
+<nav class="container-fluid  "  id="weather">
+    <div class="row reset position  d-flex justify-content-end" >
+        <a href=""></a>
+    </div>
+</nav>
 
 
-<div class="container-fluid ">
-	<div class="row position"> 
-		
-		
-	</div>
-</div>
 
 
 
-
+<!-- FOOTER START -->
 
 <footer class="container-fluid " id="footer">
 	<div class="row position d-flex justify-content-between">
@@ -141,38 +142,38 @@
 			<li><a href="">Partners &amp; Friends</a></li>
 			<li><a href=""> Media partners</a></li>
 		</ul>
-		
+
 		<ul class="col-sm-12 col-md-4 col-lg-2">
-			<li><a href=""> Latest News </a></li>
-			<li><a href="">Take the Lead </a></li>
-			<li><a href="">Open Applications </a></li>
-			<li><a href=""> Call for Promoters</a></li>
-		</ul>
-		
-		<ul class="col-sm-12 col-md-4 col-lg-2">
-			<li><a href="">Contact us </a></li>
-			<li><a href="">Facebook.com/iswib </a></li>
-			<li><a href="">Twitter.com/iswib</a></li>
-			<li><a href="">Instagram: @iswib_</a></li>
-			<li><a href="">Youtube: @iswibtv</a></li>
-			<li><a href="">e-mail: iswib@iswib.org</a></li>
-		</ul>
-		
+				<li><a href=""> Latest News </a></li>
+				<li><a href="">Take the Lead </a></li>
+				<li><a href="">Open Applications </a></li>
+				<li><a href=""> Call for Promoters</a></li>
+			</ul>
+
+			<ul class="col-sm-12 col-md-4 col-lg-2">
+					<li><a href="">Contact us </a></li>
+					<li><a href="">Facebook.com/iswib </a></li>
+					<li><a href="">Twitter.com/iswib</a></li>
+					<li><a href="">Instagram: @iswib_</a></li>
+					<li><a href="">Youtube: @iswibtv</a></li>
+					<li><a href="">e-mail: iswib@iswib.org</a></li>
+				</ul>
+
 	</div>
 </footer>
 <footer class="container-fluid copyright">
 	<div class="row position d-flex justify-content-between align-items-center">
-		
-		<p class="">2018 © Lena Bjekovic</p>
-		<div class="">
-			<a href=""> Privacy policy</a>
-			<a href="">Terms of Service</a>
-			<a href="">Contact</a>
-		</div>
-		
-		
+
+			<p class="">2018 © Lena Bjekovic</p>
+			<div class="">
+				<a href=""> Privacy policy</a>
+				<a href="">Terms of Service</a>
+				<a href="">Contact</a>
+			</div>
+
+
 	</div>
-	
+
 </footer>
 
 <script type="text/javascript" src="scripts/vendor.js"></script>
@@ -182,8 +183,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-
 <!-- geodata js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
-<script src="//geodata.solutions/includes/countrystatecity.js"></script></body>
+<script src="//geodata.solutions/includes/countrystatecity.js"></script>
+
+</body>
 </html>
