--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,7 @@
 					</ul>
 					
 				</li>
-				<li><a href="">contact</a></li>
+				<li><a href="contact.html">contact</a></li>
 				
 			</ul>
 		</div>
@@ -103,7 +103,7 @@
 	<h6>15 to 23 july</h6>
 </div>
 <!-- SECTION TWO -->
-<div id="content" class="container-fluid  ">
+<div id="content" class="container-fluid remove ">
 	
 	<div class="row d-flex position justify-content-center align-items-center flex-column"> 
 		<h1>Take the </h1> 
@@ -119,7 +119,6 @@
 		<a class="button-orange" href="">APPLY HERE</a>
 		
 	</div>
-	<div class="rect"></div>
 	<div class="skew"> </div>
 	<div class="skewRight"> </div>
 </div>
@@ -168,7 +167,6 @@
 		<p>The Opening ceremony is traditionally held in Belgrade City Hall and represents an official welcome message to the participants.
 			During the opening, the president of the Organizing Committee of the festival, the representatives of the City of Belgrade</p>
 			<a href="" class="button-orange"> read more</a>
-			
 		</div>
 		
 		
@@ -282,12 +280,17 @@
 	<div  class=" position more col-12">
 		<h5  >And many more..</h5>
 		<hr >
+
+	
+
 	</div>
+	<div class="skew"> </div>
+	<div class="skewRight"> </div>
 </div>
 
 
 <!-- FOURTH SECTION -->
-<div class="container-fluid d-flex justify-content-center align-items-center  workshops">
+<div class="container-fluid  workshops">
 	<div class="row d-flex flex-column position align-items-center justify-content-center">
 		<h1> Workshops</h1>
 		<div class=" circle d-flex flex-row">
@@ -303,7 +306,10 @@
 			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			Learn more <a href="">HERE</a>
 		</p>
+
 	</div>
+	<div class="skew"> </div>
+	<div class="skewRight"> </div>
 </div>
 
 
@@ -351,7 +357,11 @@
 		</ul>
 		
 	</div>
+
 </div>
+
+<!-- FOOTER START -->
+
 
 <footer class="container-fluid " id="footer">
 	<div class="row position d-flex justify-content-between">
