--- a/app/contact.html
+++ b/app/contact.html
@@ -96,7 +96,7 @@
 
 <!-- Announcement naav -->
 
-<nav class="container-fluid  "  id="weather">
+<nav class="container-fluid  "  id="announcement">
     <div class="row reset position  d-flex justify-content-end" >
         <a href=""></a>
     </div>
