finished contact page without form validation

--- a/app/index.html
+++ b/app/index.html
@@ -94,14 +94,23 @@
 	</nav>
 </div>
 <!-- HERO -->
-<div class="downTriangle container-fluid">
-	<div class="background"></div>
-	<h5>2018</h5>
-	<h1>ISW <p>i</p><p>B</p> 
-	</h1>
-	
-	<h6>15 to 23 july</h6>
+<div class=" hero container-fluid remove ">
+
+	<div class="row remove ">
+		
+		<div class="col content d-flex position justify-content-center align-items-center flex-column">
+			
+			<h4 >2018</h4>
+			<h1>ISWiB</h1>
+			<h5>15 to 23. july</h5>
+		</div>
+		
+	</div>
+	<div class="skew"> </div>
+	<div class="skewRight"> </div>
+
 </div>
+
 <!-- SECTION TWO -->
 <div id="content" class="container-fluid remove ">
 	
@@ -280,9 +289,9 @@
 	<div  class=" position more col-12">
 		<h5  >And many more..</h5>
 		<hr >
-
-	
-
+		
+		
+		
 	</div>
 	<div class="skew"> </div>
 	<div class="skewRight"> </div>
@@ -306,7 +315,7 @@
 			Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			Learn more <a href="">HERE</a>
 		</p>
-
+		
 	</div>
 	<div class="skew"> </div>
 	<div class="skewRight"> </div>
@@ -357,7 +366,7 @@
 		</ul>
 		
 	</div>
-
+	
 </div>
 
 <!-- FOOTER START -->
@@ -397,38 +406,38 @@
 			<li><a href="">Partners &amp; Friends</a></li>
 			<li><a href=""> Media partners</a></li>
 		</ul>
-
+		
 		<ul class="col-sm-12 col-md-4 col-lg-2">
-				<li><a href=""> Latest News </a></li>
-				<li><a href="">Take the Lead </a></li>
-				<li><a href="">Open Applications </a></li>
-				<li><a href=""> Call for Promoters</a></li>
-			</ul>
-
-			<ul class="col-sm-12 col-md-4 col-lg-2">
-					<li><a href="">Contact us </a></li>
-					<li><a href="">Facebook.com/iswib </a></li>
-					<li><a href="">Twitter.com/iswib</a></li>
-					<li><a href="">Instagram: @iswib_</a></li>
-					<li><a href="">Youtube: @iswibtv</a></li>
-					<li><a href="">e-mail: iswib@iswib.org</a></li>
-				</ul>
-
+			<li><a href=""> Latest News </a></li>
+			<li><a href="">Take the Lead </a></li>
+			<li><a href="">Open Applications </a></li>
+			<li><a href=""> Call for Promoters</a></li>
+		</ul>
+		
+		<ul class="col-sm-12 col-md-4 col-lg-2">
+			<li><a href="">Contact us </a></li>
+			<li><a href="">Facebook.com/iswib </a></li>
+			<li><a href="">Twitter.com/iswib</a></li>
+			<li><a href="">Instagram: @iswib_</a></li>
+			<li><a href="">Youtube: @iswibtv</a></li>
+			<li><a href="">e-mail: iswib@iswib.org</a></li>
+		</ul>
+		
 	</div>
 </footer>
 <footer class="container-fluid copyright">
 	<div class="row position d-flex justify-content-between align-items-center">
-
-			<p class="">2018 © Lena Bjekovic</p>
-			<div class="">
-				<a href=""> Privacy policy</a>
-				<a href="">Terms of Service</a>
-				<a href="">Contact</a>
-			</div>
-
-
+		
+		<p class="">2018 © Lena Bjekovic</p>
+		<div class="">
+			<a href=""> Privacy policy</a>
+			<a href="">Terms of Service</a>
+			<a href="">Contact</a>
+		</div>
+		
+		
 	</div>
-
+	
 </footer>
 
 <script type="text/javascript" src="scripts/vendor.js"></script>
