--- a/app/contact.html
+++ b/app/contact.html
@@ -97,8 +97,11 @@
 <!-- Announcement nav -->
 
 <nav class="container-fluid  "  id="announcement">
-    <div class="row reset position  d-flex justify-content-end" >
-        <a href="">Applications are open. APPLY NOW</a>
+    <div class="row reset position  d-flex justify-content-start" >
+        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
+        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
+        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
+
     </div>
 </nav>
 
@@ -142,7 +145,7 @@
                 <p>Masarinkova 5/6</p>
                 <p>Belgrade,Serbia</p>
 
-                <img src="../img/map" alt="">
+                <img  src="../img/map.png" alt="">
             </div>
             <div class="col    address">
                 
