--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
 					
 				</li>
 				
-				<li><a href="">gallery</a></li>
+				<li><a href="gallery.html">gallery</a></li>
 				<li class="dropdown show nav-item">
 					<a class="dropdown" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						apply
