--- a/app/index.html
+++ b/app/index.html
@@ -94,21 +94,21 @@
 	</nav>
 </div>
 <!-- HERO -->
+<div class="background">
 <div class=" hero container-fluid remove ">
 
-	<div class="row remove ">
+	<div class="row hero2 position remove ">
 		
 		<div class="col content d-flex position justify-content-center align-items-center flex-column">
-			
 			<h4 >2018</h4>
 			<h1>ISWiB</h1>
 			<h5>15 to 23. july</h5>
-		</div>
-		
-	</div>
-	<div class="skew"> </div>
-	<div class="skewRight"> </div>
 
+		</div>
+
+	</div>
+
+</div>
 </div>
 
 <!-- SECTION TWO -->
