--- a/app/index.html
+++ b/app/index.html
@@ -94,8 +94,8 @@
 	</nav>
 </div>
 <!-- HERO -->
-<div class="background">
-<div class=" hero container-fluid remove ">
+
+<div class=" hero background container-fluid remove ">
 
 	<div class="row hero2 position remove ">
 		
@@ -105,11 +105,9 @@
 			<h5>15 to 23. july</h5>
 
 		</div>
-
 	</div>
+</div>
 
-</div>
-</div>
 
 <!-- SECTION TWO -->
 <div id="content" class="container-fluid remove ">
