--- a/app/gallery.html
+++ b/app/gallery.html
@@ -4,10 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <!-- // Add the new slick-theme.css if you want the default styling -->
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-    
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -112,6 +109,19 @@
 
 
 <!-- BACK TO HOME PAGE BUTTON -->
+
+<div class="row position">
+<a href=""> <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    width="275.776px" height="512px" viewBox="115.5 0 275.776 512" enable-background="new 115.5 0 275.776 512"
+    xml:space="preserve">
+<g>
+   <path fill="#013F70" d="M155.784,255.986L387.012,24.759c5.687-5.687,5.687-14.807,0-20.494c-5.688-5.687-14.807-5.687-20.494,0
+       L124.989,245.793c-5.687,5.687-5.687,14.807,0,20.494l241.528,241.421c2.79,2.79,6.545,4.292,10.193,4.292
+       s7.403-1.395,10.193-4.292c5.687-5.687,5.687-14.807,0-20.494L155.784,255.986z"/>
+</g>
+</svg></a>
+
+</div>
 
 <!-- CONTENT -->
 
@@ -276,11 +286,7 @@
 
 
 
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="slick/slick.min.js"></script>
-				
+
 
 </body>
 </html>
