--- a/app/contact.html
+++ b/app/contact.html
@@ -98,10 +98,10 @@
 <!-- Announcement nav -->
 
 <nav class="container-fluid  "  id="announcement">
-    <div class="row reset position  d-flex justify-content-start" >
+    <div class="row reset position  d-flex justify-content-end" >
         <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
-        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
-        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
+        <!-- <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
+        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a> -->
         
     </div>
 </nav>
