--- a/app/gallery.html
+++ b/app/gallery.html
@@ -17,7 +17,7 @@
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation reset container-fluid  r" id="navigation">
+	<div class="navigation reset container-fluid myNav reset" id="">
 		<nav class="navbar position reset row  navbar-light navbar-expand-lg  "  >
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="index.html">
@@ -98,10 +98,10 @@
 <!-- Announcement nav -->
 
 <nav class="container-fluid  "  id="announcement">
-    <div class="row reset position  d-flex justify-content-start" >
+    <div class="row reset position  d-flex justify-content-end" >
         <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
-        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
-        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
+        <!-- <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
+        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a> -->
         
     </div>
 </nav>
