--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation reset container-fluid  r" id="navigation">
-		<nav class="navbar position reset row  navbar-light navbar-expand-lg  "  >
+	<div class="navigation reset container-fluid myNav reset" id="navigation">
+		<nav class="navbar position reset row  navbar-light navbar-expand-lg">
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="#">
 					<!-- LOGO -->
