--- a/app/contact.html
+++ b/app/contact.html
@@ -17,7 +17,7 @@
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation reset container-fluid  r" id="navigation">
+	<div class="navigation reset container-fluid myNav reset" >
 		<nav class="navbar position reset row  navbar-light navbar-expand-lg  "  >
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="index.html">
