--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation reset container-fluid myNav reset" id="navigation">
+	<div class="navigation reset container-fluid myNav reset" >
 		<nav class="navbar position reset row  navbar-light navbar-expand-lg">
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="#">
