form validation, onscroll event

--- a/app/contact.html
+++ b/app/contact.html
@@ -17,7 +17,7 @@
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation reset container-fluid myNav reset" >
+	<div class="navigation reset container-fluid myNav reset" id="navigation" >
 		<nav class="navbar position reset row  navbar-light navbar-expand-lg  "  >
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="index.html">
@@ -162,7 +162,7 @@
         </div>
         <div class="col address">
             
-            <form action="" class="d-flex flex-column">
+            <form action="" id="mojaForma" class="d-flex flex-column">
                 <h2>Contact us here</h2>
                 <hr>
                 <div>
