--- a/app/index.html
+++ b/app/index.html
@@ -16,13 +16,13 @@
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation reset container-fluid myNav reset" >
+	<div class="navigation reset container-fluid myNav reset" id="navigation" >
 		<nav class="navbar position reset row  navbar-light navbar-expand-lg">
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="#">
 					<!-- LOGO -->
 					<svg version="1.1" class="d-inline-block reset align-middle" id="balloon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-					width="83.5px" height="89.75px" viewBox="0 0 83.5 89.75" style="enable-background:new 0 0 83.5 89.75;" xml:space="preserve">
+					viewBox="0 0 83.5 89.75" style="enable-background:new 0 0 83.5 89.75;" xml:space="preserve">
 					<path  d="M34.917,30.458c0,0,3.5-6.667,13.333-5.583s8.167-8.083,8.667-8.917s-4,2.416-8.417-0.917
 					s-12.25-5.666-16.333,0.667S34.917,30.458,34.917,30.458z"/>
 					<path  d="M23.208,60.961c0,0-3.226-3.027-1.072-8.423c2.154-5.397-3.295-5.89-3.689-6.304
@@ -46,6 +46,7 @@
 					<path d="M54.13,63.001c0,0,0.843-3.475,5.497-4.108c4.658-0.636,2.833-4.668,2.966-5.104
 					c0.134-0.446-1.563,1.573-3.981,0.547c-2.423-1.029-6.299-1.201-7.449,2.187C50.011,59.909,54.13,63.001,54.13,63.001z"/>
 				</svg>
+				<!-- <img src="../img/balloon.png" id="balloon" alt=""> -->
 				
 				International Student Week in Belgrade
 			</a>
