--- a/app/gallery.html
+++ b/app/gallery.html
@@ -17,7 +17,7 @@
 	</nav>
 	
 	<!-- main nav -->
-	<div class="navigation reset container-fluid myNav reset" id="">
+	<div class="navigation reset container-fluid myNav reset" id="navigation">
 		<nav class="navbar position reset row  navbar-light navbar-expand-lg  "  >
 			<div class="brand reset">
 				<a class="navbar-brand reset" href="index.html">
@@ -266,11 +266,14 @@
     
 </footer>
 
+
 <script type="text/javascript" src="scripts/vendor.js"></script>
 <script type="text/javascript" src="scripts/scripts.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
 
 
 
