--- a/app/contact.html
+++ b/app/contact.html
@@ -23,7 +23,7 @@
 				<a class="navbar-brand reset" href="index.html">
 					<!-- LOGO -->
 					<svg version="1.1" class="d-inline-block reset align-middle" id="balloon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-					width="83.5px" height="89.75px" viewBox="0 0 83.5 89.75" style="enable-background:new 0 0 83.5 89.75;" xml:space="preserve">
+					 viewBox="0 0 83.5 89.75" style="enable-background:new 0 0 83.5 89.75;" xml:space="preserve">
 					<path  d="M34.917,30.458c0,0,3.5-6.667,13.333-5.583s8.167-8.083,8.667-8.917s-4,2.416-8.417-0.917
 					s-12.25-5.666-16.333,0.667S34.917,30.458,34.917,30.458z"/>
 					<path  d="M23.208,60.961c0,0-3.226-3.027-1.072-8.423c2.154-5.397-3.295-5.89-3.689-6.304
