only gallery left

--- a/app/index.html
+++ b/app/index.html
@@ -97,11 +97,11 @@
 
 <div class=" hero background container-fluid remove ">
 
-	<div class="row hero2 position remove ">
+	<div class="row hero-container position remove ">
 		
 		<div class="col content d-flex position justify-content-center align-items-center flex-column">
 			<h4 >2018</h4>
-			<h1>ISWiB</h1>
+			<h1 >ISWiB</h1>
 			<h5>15 to 23. july</h5>
 
 		</div>
@@ -111,8 +111,8 @@
 
 <!-- SECTION TWO -->
 <div id="content" class="container-fluid remove ">
-	
-	<div class="row d-flex position justify-content-center align-items-center flex-column"> 
+
+	<div  class="row d-flex myContent position justify-content-center align-items-center flex-column"> 
 		<h1>Take the </h1> 
 		<div class=" circle d-flex flex-row">
 			<div class="circle-blue"> </div> 
@@ -126,8 +126,8 @@
 		<a class="button-orange" href="">APPLY HERE</a>
 		
 	</div>
-	<div class="skew"> </div>
-	<div class="skewRight"> </div>
+	<!-- <div class="skew"> </div>
+	<div class="skewRight"> </div> -->
 </div>
 
 <!-- THIRD section -->
@@ -285,8 +285,8 @@
 		
 	</div>
 	<div  class=" position more col-12">
-		<h5  >And many more..</h5>
-		<hr >
+		<a href="">And many more..</a>
+		<hr>
 		
 		
 		
