--- a/app/index.html
+++ b/app/index.html
@@ -126,12 +126,12 @@
 		<a class="button-orange" href="">APPLY HERE</a>
 		
 	</div>
-	<!-- <div class="skew"> </div>
-	<div class="skewRight"> </div> -->
+	<div class="skew"> </div>
+	<div class="skewRight"> </div>
 </div>
 
 <!-- THIRD section -->
-<div class="container-fluid  reset third  justify-content-center flex-column ">
+<div class="container-fluid  reset activities  justify-content-center flex-column ">
 	<div class="row  reset d-flex justify-content-between position  content">
 		
 		<h1 class="col-lg-12">Activities</h1>
@@ -291,8 +291,7 @@
 		
 		
 	</div>
-	<div class="skew"> </div>
-	<div class="skewRight"> </div>
+
 </div>
 
 
@@ -315,8 +314,7 @@
 		</p>
 		
 	</div>
-	<div class="skew"> </div>
-	<div class="skewRight"> </div>
+
 </div>
 
 
