--- a/app/gallery.html
+++ b/app/gallery.html
@@ -168,9 +168,19 @@
         <a class="play-pause"></a>
         <ol class="indicator"></ol>
     </div>
-    
-    
+    <div id="links">
+        <a href="../img/jeca.png" title="Banana">
+            <img src="../img/jeca.png" alt="Banana">
+        </a>
+        <a href="images/apple.jpg" title="Apple">
+            <img src="images/thumbnails/apple.jpg" alt="Apple">
+        </a>
+        <a href="images/orange.jpg" title="Orange">
+            <img src="images/thumbnails/orange.jpg" alt="Orange">
+        </a>
+    </div>
 </div>
+
 
 
 
