--- a/app/gallery.html
+++ b/app/gallery.html
@@ -167,16 +167,95 @@
         <a class="play-pause"></a>
         <ol class="indicator"></ol>
     </div>
-    <div id="links">
-        <a href="../img/jeca.png" title="Banana">
-            <img src="../img/jeca.png" alt="Banana">
+    <div id="links" class="row position">
+        <a href="../img/one.jpg"  title="img">
+            <div class="thumbnail col">
+            <img src="../img/one.jpg" height="300" alt="img">
+        </div>
         </a>
-        <a href="images/apple.jpg" title="Apple">
-            <img src="images/thumbnails/apple.jpg" alt="Apple">
+
+        <a href="../img/two.jpg"  >
+            <div class="thumbnail col">
+            <img src="../img/two.jpg" height="300" alt="img">
+        </div>
         </a>
-        <a href="images/orange.jpg" title="Orange">
-            <img src="images/thumbnails/orange.jpg" alt="Orange">
+        <a href="../img/three.jpg"  >
+            <div class="thumbnail col">
+            <img src="../img/three.jpg" height="300"  alt="img">
+        </div>
         </a>
+        <a href="../img/four.jpg"  >
+            <div class="thumbnail col">
+            <img src="../img/four.jpg" height="300" style="position:relative;left:-40%;" alt="img">
+        </div>
+        </a>
+
+        <a href="../img/four.jpg">
+            <div class="thumbnail col">
+            <img src="../img/four.jpg" height="300" style="position:relative;left:-40%;" alt="img">
+        </div>
+        </a>
+        <a href="../img/three.jpg">
+            <div class="thumbnail col">
+            <img src="../img/three.jpg" height="300"  alt="img">
+        </div>
+        </a>
+ 
+        <a href="../img/two.jpg">
+            <div class="thumbnail col">
+            <img src="../img/two.jpg" height="300" alt="img">
+        </div>
+        </a>
+        <a href="../img/one.jpg">
+            <div class="thumbnail col">
+            <img src="../img/one.jpg" height="300" alt="img">
+        </div>
+        </a>
+
+        <a href="../img/one.jpg"  title="img">
+            <div class="thumbnail col">
+            <img src="../img/one.jpg" height="300" alt="img">
+        </div>
+        </a>
+
+        <a href="../img/two.jpg"  >
+            <div class="thumbnail col">
+            <img src="../img/two.jpg" height="300" alt="img">
+        </div>
+        </a>
+        <a href="../img/three.jpg"  >
+            <div class="thumbnail col">
+            <img src="../img/three.jpg" height="300"  alt="img">
+        </div>
+        </a>
+        <a href="../img/four.jpg"  >
+            <div class="thumbnail col">
+            <img src="../img/four.jpg" height="300" style="position:relative;left:-40%;" alt="img">
+        </div>
+        </a>
+
+        <a href="../img/four.jpg">
+            <div class="thumbnail col">
+            <img src="../img/four.jpg" height="300" style="position:relative;left:-40%;" alt="img">
+        </div>
+        </a>
+        <a href="../img/three.jpg">
+            <div class="thumbnail col">
+            <img src="../img/three.jpg" height="300"  alt="img">
+        </div>
+        </a>
+ 
+        <a href="../img/two.jpg">
+            <div class="thumbnail col">
+            <img src="../img/two.jpg" height="300" alt="img">
+        </div>
+        </a>
+        <a href="../img/one.jpg">
+            <div class="thumbnail col">
+            <img src="../img/one.jpg" height="300" alt="img">
+        </div>
+        </a>
+
     </div>
 </div>
 
