--- a/app/gallery.html
+++ b/app/gallery.html
@@ -103,8 +103,7 @@
 <nav class="container-fluid  "  id="announcement">
     <div class="row reset position  d-flex justify-content-end" >
         <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
-        <!-- <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
-        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a> -->
+
         
     </div>
 </nav>
@@ -260,7 +259,20 @@
 </div>
 
 
+<!-- BACK TO HOME PAGE BUTTON -->
 
+<div class="row position">
+    <a href="index.html"> <svg version="1.1" id="backToTop" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        height="70px" width="70px"viewBox="115.5 0 275.776 512" enable-background="new 115.5 0 275.776 512"
+        xml:space="preserve">
+        <g>
+            <path fill="#013F70" d="M155.784,255.986L387.012,24.759c5.687-5.687,5.687-14.807,0-20.494c-5.688-5.687-14.807-5.687-20.494,0
+            L124.989,245.793c-5.687,5.687-5.687,14.807,0,20.494l241.528,241.421c2.79,2.79,6.545,4.292,10.193,4.292
+            s7.403-1.395,10.193-4.292c5.687-5.687,5.687-14.807,0-20.494L155.784,255.986z"/>
+        </g>
+    </svg></a>
+    
+</div>
 
 
 <!-- FOOTER START -->
