--- a/app/gallery.html
+++ b/app/gallery.html
@@ -262,7 +262,7 @@
 <!-- BACK TO HOME PAGE BUTTON -->
 
 <div class="row position">
-    <a href=""> </a>
+    <a href=""> <img src="../img/back-to-top.png" alt=""></a>
     
 </div>
 
