--- a/app/gallery.html
+++ b/app/gallery.html
@@ -166,7 +166,7 @@
         <a class="play-pause"></a>
         <ol class="indicator"></ol>
     </div>
-    <div id="links" class="row position">
+    <div id="links" class="row position justify-content-center">
         <a href="../img/one.jpg"  title="img">
             <div class="thumbnail col">
             <img src="../img/one.jpg" height="300" alt="img">
@@ -261,8 +261,8 @@
 
 <!-- BACK TO HOME PAGE BUTTON -->
 
-<div class="row position">
-    <a href=""> <img src="../img/back-to-top.png" alt=""></a>
+<div class="row position justify-content-end">
+    <a href="" > <img id="back-to-top"   src="../img/back-to-top.png" alt=""></a>
     
 </div>
 
