--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 	<div class="navigation reset container-fluid myNav reset" id="navigation" >
 		<nav class="navbar position reset row  navbar-light navbar-expand-lg">
 			<div class="brand reset">
-				<a class="navbar-brand reset" href="#">
+				<a class="navbar-brand reset" id="myBalloon" href="#">
 					<!-- LOGO -->
 					<svg version="1.1" class="d-inline-block reset align-middle" id="balloon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 					viewBox="0 0 83.5 89.75" style="enable-background:new 0 0 83.5 89.75;" xml:space="preserve">
