--- a/app/contact.html
+++ b/app/contact.html
@@ -163,7 +163,7 @@
         </div>
         <div class="col address">
             
-            <form action="" id="mojaForma" class="d-flex flex-column">
+            <form action="" id="form" class="d-flex flex-column">
                 <h2>Contact us here</h2>
                 <hr>
                 <div>
