--- a/app/contact.html
+++ b/app/contact.html
@@ -204,7 +204,13 @@
 </div>
 
 
+<!-- BACK TO HOME PAGE BUTTON -->
 
+<div class="row position justify-content-end">
+	
+        <img id="back-to-top"   src="../img/back-to-top.png" alt="">
+        
+    </div>
 
 
 
