--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-
+	<link rel="stylesheet" href="css/style.css">
+	
 </head>
 <body>
 	
@@ -98,15 +98,15 @@
 </div>
 <!-- HERO -->
 
-<div class=" hero background container-fluid remove ">
-
+<div class=" hero background container-fluid remove " id="hero">
+	
 	<div class="row hero-container position remove ">
 		
 		<div class="col content d-flex position justify-content-center align-items-center flex-column">
 			<h4 >2018</h4>
 			<h1 >ISWiB</h1>
 			<h5>15 to 23. july</h5>
-
+			
 		</div>
 	</div>
 </div>
@@ -114,7 +114,7 @@
 
 <!-- SECTION TWO -->
 <div id="content" class="container-fluid remove ">
-
+	
 	<div  class="row d-flex myContent position justify-content-center align-items-center flex-column"> 
 		<h1>Take the </h1> 
 		<div class=" circle d-flex flex-row">
@@ -294,7 +294,7 @@
 		
 		
 	</div>
-
+	
 </div>
 
 
@@ -317,7 +317,7 @@
 		</p>
 		
 	</div>
-
+	
 </div>
 
 
@@ -371,10 +371,10 @@
 <!-- BACK TO HOME PAGE BUTTON -->
 
 <div class="row position justify-content-end">
-		<a href="" >
-			<img id="back-to-top" onclick="topFunction()"  src="../img/back-to-top.png" alt="">
-		</a>
-	</div>
+	
+	<img id="back-to-top"   src="../img/back-to-top.png" alt="">
+	
+</div>
 <!-- FOOTER START -->
 
 
