--- a/app/gallery.html
+++ b/app/gallery.html
@@ -102,7 +102,7 @@
 
 <nav class="container-fluid  "  id="announcement">
     <div class="row reset position  d-flex justify-content-end" >
-        <a href="">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
+        <a href="participants.html">PARTICIPANT APPLICATIONS ARE OPEN!   APPLY HERE!</a>
     </div>
 </nav>
 
