--- a/app/gallery.html
+++ b/app/gallery.html
@@ -15,7 +15,7 @@
 	<!-- weather -->
 	<nav class="container-fluid  "  id="weather">
 		<div class="row reset position  d-flex justify-content-end" >
-			<a href=""></a>
+			<p  id="myAPI"></p>
 		</div>
 	</nav>
 	
